# research

./: .gitignore  README.md
anduro/: README.md
citrea/: README.md
crosschain/: README.md
crosschain/hyperlane/: README.md
crosschain/hyperlane/configs/: core-config.yaml
crosschain/hyperlane/contracts/: CoverLib.sol  Gov.sol  InsuranceCover.sol  InsurancePool.sol
crosschain/hyperlane/destination/: Cargo.toml
crosschain/hyperlane/destination/src/: cid.rs  cover.rs  main.rs  pool.rs  types.rs  utils.rs
crosschain/hyperlane/hardhat/: hardhat.config.js  package-lock.json
crosschain/hyperlane/hardhat/artifacts/contracts/CoverLib.sol/: CoverLib.json
crosschain/hyperlane/hardhat/cache/: solidity-files-cache.json
crosschain/hyperlane/hardhat/contracts/: Gov.sol  InsuranceCover.sol  InsurancePool.sol  MockERC20.sol
crosschain/hyperlane/hardhat/origin/: deploy.js
crosschain/hyperlane/hardhat/scripts/: destination.js  origin.js  source.js  target.js
crosschain/hyperlane/origin/: Cargo.toml
crosschain/hyperlane/origin/src/: main.rs
crosschain/hyperlane/source/: Cargo.toml
crosschain/hyperlane/source/src/: main.rs
crosschain/layerzero/: README.md
crosschain/layerzero/contracts/: CoverLib.sol  Gov.sol  InsuranceCover.sol  InsurancePool.sol
fracticalBitcoin/: README.md
frost-tss/: Cargo.toml  README.md  RESEARCH.md
frost-tss/src/: key_generation.rs  main.rs  round1_network.rs  round2_network.rs
icp/: README.md
nubit/: README.md
substrate-frontier/: README.md
tss/: README.md
(+26 files in other folders)
