[package]
name = "tss"
version = "0.1.0"
edition = "2021"

[dependencies]
frost-ristretto255 = "2.0.0-rc.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
rand = "0.8.5"
libp2p = { version = "0.53.2", features = ["tokio", "gossipsub", "mdns", "tcp", "yamux", "noise", "quic", "macros", "ping", "kad", "identify", "relay"] }
bincode = "1.3.3"
tracing-subscriber = "0.3"
serde = {version = "1.0.204", features = ["derive"]}
frost-core = "1.0.0"
libp2p-request-response = {version = "0.26.3"}
libp2p-kad = "0.45.3"
tracing = "0.1.40"