[package]
name = "destination"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2", features = ["full", "node-bindings"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.124"
hex = "0.4.3"